--- a/compose.html
+++ b/compose.html
@@ -26,6 +26,30 @@
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="assets/images/favicon.png">
+
+  <!-- 隐藏滚动条样式 -->
+  <style>
+    /* 隐藏所有浏览器的滚动条 */
+    html {
+      overflow-x: hidden;
+      scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none; /* IE and Edge */
+    }
+
+    body {
+      overflow-x: hidden;
+      scrollbar-width: none; /* Firefox */
+      -ms-overflow-style: none; /* IE and Edge */
+    }
+
+    /* 隐藏 Webkit 浏览器的滚动条 (Chrome, Safari, Opera) */
+    html::-webkit-scrollbar,
+    body::-webkit-scrollbar {
+      display: none;
+      width: 0;
+      height: 0;
+    }
+  </style>
 </head>
 <body>
 
@@ -1948,7 +1972,7 @@
 }
 
 .footer-logo {
-  width: 220px;
+  width: 180px;
   height: auto;
   margin-top: 0px;       /* logo 本身不需要边距，由 wrapper 控制 */
   margin-left: 0px;      /* logo 本身不需要边距，由 wrapper 控制 */
@@ -1980,12 +2004,12 @@
 
 .footer-cta-button {
   display: inline-block;
-  padding: 12px 30px;    /* 增加左右内边距，让按钮变宽 */
+  padding: 10px 22px;    /* 增加左右内边距，让按钮变宽 */
   background: #2A2A2A;   /* 暗灰色背景 */
   color: #FFFFFF;
   text-decoration: none;
   border-radius: 5px;    /* 调整按钮圆角 */
-  font-size: 14px;
+  font-size: 13px;
   font-weight: 500;
   border: 1px solid rgba(255, 255, 255, 0.2);  /* 边框 */
   transition: all 0.3s ease;
@@ -1998,6 +2022,10 @@
 }
 
 /* 链接列 */
+.footer-links-grid {
+  display: contents;
+}
+
 .footer-links-column {
   display: flex;
   flex-direction: column;
@@ -2108,16 +2136,52 @@
 /* 响应式设计 */
 @media (max-width: 991px) {
   .footer-main {
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 3rem;
+    grid-template-columns: 1.4fr repeat(4, minmax(120px, 1fr));
+    gap: 2rem;
+    align-items: flex-start;
   }
 
   .footer-brand {
-    grid-column: span 3;
+    grid-column: span 1;
   }
 
   .footer-main-box {
-    padding: 3rem 30px;
+    padding: 60px 30px;
+    height: 380px;
+    min-height: 380px;
+  }
+
+  .footer-logo-wrapper {
+    margin-top: -80px;
+    margin-left: -20px;
+    margin-bottom: 0;
+  }
+
+  .footer-logo {
+    width: 150px;
+  }
+
+  .footer-links-column {
+    margin-top: -40px;
+    margin-right: -30px;
+  }
+
+  .footer-description {
+    font-size: 10px;
+  }
+
+  .footer-brand-name,
+  .footer-brand-subtitle {
+    font-size: 13px;
+  }
+
+  .footer-column-title {
+    font-size: 11px;
+  }
+
+  .footer-link,
+  .footer-legal-link {
+    font-size: 9px;
   }
 
   .footer-bottom-box {
@@ -2135,21 +2199,70 @@
   }
 
   .footer-main {
-    grid-template-columns: 1fr;
-    gap: 3rem;
+    grid-template-columns: 0.8fr 1.2fr;
+    gap: 1.5rem;
+    align-items: flex-start;
   }
 
   .footer-brand {
-    grid-column: span 1;
+    grid-column: 1 / 2;
+  }
+
+  .footer-logo-wrapper {
+    margin: 0;
+    gap: 0.5rem;
+    margin-bottom: 12px;
+    align-items: flex-start;
+  }
+
+  .footer-logo {
+    width: 130px;
   }
 
   .footer-description {
     max-width: 100%;
+    margin-left: 0;
+    font-size: 12px;
+    line-height: 1.4;
   }
 
   .footer-main-box {
     padding: 30px 20px;
     margin-bottom: 15px;
+    height: 350px;
+    min-height: 350px;
+  }
+
+  .footer-links-column {
+    margin-top: 0;
+    margin-right: 0;
+    gap: 0.5rem;
+  }
+
+  .footer-links-grid {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+    gap: 0.55rem;
+    grid-column: 2 / 3;
+    grid-row: 1;
+  }
+
+  .footer-links-list {
+    gap: 1px;
+  }
+
+  .footer-column-title {
+    font-size: 13px;
+    margin-bottom: 0.75rem;
+  }
+
+  .footer-link {
+    font-size: 12px;
+  }
+
+  .footer-cta-button {
+    padding: 8px 20px;
+    font-size: 9px;
   }
 
   .footer-bottom-box {
@@ -2164,7 +2277,61 @@
   }
 
   .footer-legal-links {
-    gap: 20px;
+    flex-direction: column;
+    gap: 0.75rem;
+  }
+
+  .footer-legal-links li:not(:last-child)::after {
+    display: none;
+  }
+
+  .footer-brand-name,
+  .footer-brand-subtitle {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 479px) {
+  .footer-links-grid {
+    gap: 0.2rem;
+  }
+
+  .footer-main-box {
+    padding: 25px 15px;
+    height: 350px;
+    min-height: 350px;
+  }
+
+  .footer-logo {
+    width: 100px;
+  }
+
+  .footer-description {
+    font-size: 10px;
+    display: none;
+  }
+
+  .footer-brand-name,
+  .footer-brand-subtitle {
+    font-size: 11px;
+  }
+
+  .footer-column-title {
+    font-size: 11px;
+    margin-bottom: 0.5rem;
+  }
+
+  .footer-links-list {
+    gap: 8px;
+  }
+
+  .footer-link,
+  .footer-legal-link {
+    font-size: 9px;
+  }
+
+  .footer-bottom {
+    gap: 15px;
   }
 }
 </style>
@@ -2189,46 +2356,48 @@
         <a href="#contact" class="footer-cta-button">Contact us</a>
       </div>
 
-      <!-- EXPLORE 列 -->
-      <div class="footer-links-column">
-        <h3 class="footer-column-title">EXPLORE</h3>
-        <ul class="footer-links-list">
-          <li><a href="#explore" class="footer-link">Explore</a></li>
-          <li><a href="#about" class="footer-link">About</a></li>
-          <li><a href="#contact" class="footer-link">Contact</a></li>
-        </ul>
-      </div>
+      <div class="footer-links-grid">
+        <!-- EXPLORE 列 -->
+        <div class="footer-links-column">
+          <h3 class="footer-column-title">EXPLORE</h3>
+          <ul class="footer-links-list">
+            <li><a href="#explore" class="footer-link">Explore</a></li>
+            <li><a href="#about" class="footer-link">About</a></li>
+            <li><a href="#contact" class="footer-link">Contact</a></li>
+          </ul>
+        </div>
 
-      <!-- FEATURES 列 -->
-      <div class="footer-links-column">
-        <h3 class="footer-column-title">FEATURES</h3>
-        <ul class="footer-links-list">
-          <li><a href="#create" class="footer-link">Create</a></li>
-          <li><a href="#edit" class="footer-link">Edit</a></li>
-          <li><a href="#avatar" class="footer-link">Avatar</a></li>
-        </ul>
-      </div>
+        <!-- FEATURES 列 -->
+        <div class="footer-links-column">
+          <h3 class="footer-column-title">FEATURES</h3>
+          <ul class="footer-links-list">
+            <li><a href="#create" class="footer-link">Create</a></li>
+            <li><a href="#edit" class="footer-link">Edit</a></li>
+            <li><a href="#avatar" class="footer-link">Avatar</a></li>
+          </ul>
+        </div>
 
-      <!-- SOLUTIONS 列 -->
-      <div class="footer-links-column">
-        <h3 class="footer-column-title">SOLUTIONS</h3>
-        <ul class="footer-links-list">
-          <li><a href="#brand-marketing" class="footer-link">Brand Marketing</a></li>
-          <li><a href="#storytelling" class="footer-link">Storytelling</a></li>
-          <li><a href="#sales" class="footer-link">Sales & Advertisment</a></li>
-          <li><a href="#media" class="footer-link">Media</a></li>
-        </ul>
-      </div>
+        <!-- SOLUTIONS 列 -->
+        <div class="footer-links-column">
+          <h3 class="footer-column-title">SOLUTIONS</h3>
+          <ul class="footer-links-list">
+            <li><a href="#brand-marketing" class="footer-link">Brand Marketing</a></li>
+            <li><a href="#storytelling" class="footer-link">Storytelling</a></li>
+            <li><a href="#sales" class="footer-link">Sales & Advertisment</a></li>
+            <li><a href="#media" class="footer-link">Media</a></li>
+          </ul>
+        </div>
 
-      <!-- AI SUITE 列 -->
-      <div class="footer-links-column">
-        <h3 class="footer-column-title">AI SUITE</h3>
-        <ul class="footer-links-list">
-          <li><a href="#content-generator" class="footer-link">Content generator</a></li>
-          <li><a href="#ai-avatar" class="footer-link">AI avatar.</a></li>
-          <li><a href="#product-shots" class="footer-link">Product shots</a></li>
-          <li><a href="#clipmaker" class="footer-link">Clipmaker</a></li>
-        </ul>
+        <!-- AI SUITE 列 -->
+        <div class="footer-links-column">
+          <h3 class="footer-column-title">AI SUITE</h3>
+          <ul class="footer-links-list">
+            <li><a href="#content-generator" class="footer-link">Content generator</a></li>
+            <li><a href="#ai-avatar" class="footer-link">AI avatar.</a></li>
+            <li><a href="#product-shots" class="footer-link">Product shots</a></li>
+            <li><a href="#clipmaker" class="footer-link">Clipmaker</a></li>
+          </ul>
+        </div>
       </div>
       </div>
     </div>
