--- a/sections/built_for_speed/built_for_speed.html
+++ b/sections/built_for_speed/built_for_speed.html
@@ -134,6 +134,63 @@
     display: block;
   }
 
+  .built-for-speed-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+    display: block;
+    cursor: pointer;
+  }
+
+  /* 视频预览模态框 */
+  .video-modal {
+    display: none;
+    position: fixed;
+    z-index: 10000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(10px);
+  }
+
+  .video-modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
+    width: auto;
+    height: auto;
+  }
+
+  .video-modal video {
+    width: 100%;
+    height: 100%;
+    max-width: 80vw;
+    max-height: 80vh;
+    object-fit: contain;
+  }
+
+  .video-modal-close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 10001;
+    transition: color 0.3s ease;
+  }
+
+  .video-modal-close:hover {
+    color: #ccc;
+  }
+
   /* 响应式设计 */
   @media (max-width: 991px) {
     .built-for-speed {
@@ -191,13 +248,27 @@
         </span>
       </div>
 
-      <!-- 右侧图片 -->
+      <!-- 右侧视频 -->
       <div class="built-for-speed-image-wrapper">
-        <img src="images/3.png" alt="Built For Speed" class="built-for-speed-image" loading="lazy">
+        <video class="built-for-speed-video" muted loop playsinline data-video-src="videos/video_2.mp4">
+          <source src="videos/video_2.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>
     </div>
   </div>
 </section>
+
+<!-- 视频预览模态框 -->
+<div id="builtforspeed-video-modal" class="video-modal">
+  <span class="video-modal-close">&times;</span>
+  <div class="video-modal-content">
+    <video id="builtforspeed-modal-video" controls>
+      <source src="" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</div>
 
 <script>
   // Built For Speed 模块交互逻辑
@@ -205,14 +276,76 @@
     'use strict';
 
     const initBuiltForSpeed = () => {
-      // 图片加载错误处理
-      const image = document.querySelector('.built-for-speed-image');
-      if (image) {
-        image.addEventListener('error', function () {
-          console.warn(`Failed to load image: ${this.src}`);
+      // 视频加载错误处理
+      const video = document.querySelector('.built-for-speed-video');
+      if (video) {
+        video.addEventListener('error', function () {
+          console.warn(`Failed to load video: ${this.querySelector('source').src}`);
           this.style.display = 'none';
         });
+
+        // 初始状态暂停视频
+        video.pause();
+
+        // 鼠标悬停时播放视频
+        const wrapper = video.closest('.built-for-speed-image-wrapper');
+        if (wrapper) {
+          wrapper.addEventListener('mouseenter', () => {
+            video.play();
+          });
+          wrapper.addEventListener('mouseleave', () => {
+            video.pause();
+            video.currentTime = 0; // 重置到开始位置
+          });
+
+          // 点击视频打开模态框预览
+          video.addEventListener('click', function () {
+            openVideoModal(this.querySelector('source').src);
+          });
+
+          // 添加鼠标样式提示可点击
+          video.style.cursor = 'pointer';
+        }
       }
+
+      // 模态框功能
+      const modal = document.getElementById('builtforspeed-video-modal');
+      const modalVideo = document.getElementById('builtforspeed-modal-video');
+      const closeBtn = document.querySelector('#builtforspeed-video-modal .video-modal-close');
+
+      function openVideoModal(videoSrc) {
+        modalVideo.src = videoSrc;
+        modal.style.display = 'block';
+        document.body.style.overflow = 'hidden'; // 防止背景滚动
+      }
+
+      function closeVideoModal() {
+        modal.style.display = 'none';
+        modalVideo.pause();
+        modalVideo.src = '';
+        document.body.style.overflow = ''; // 恢复滚动
+      }
+
+      // 关闭按钮事件
+      if (closeBtn) {
+        closeBtn.addEventListener('click', closeVideoModal);
+      }
+
+      // 点击模态框背景关闭
+      if (modal) {
+        modal.addEventListener('click', function (e) {
+          if (e.target === modal) {
+            closeVideoModal();
+          }
+        });
+      }
+
+      // ESC键关闭模态框
+      document.addEventListener('keydown', function (e) {
+        if (e.key === 'Escape' && modal.style.display === 'block') {
+          closeVideoModal();
+        }
+      });
     };
 
     // DOM 加载后初始化
