--- a/sections/exp_3/exp_3.html
+++ b/sections/exp_3/exp_3.html
@@ -236,6 +236,54 @@
     margin-bottom: var(--spacing-2xl);
   }
 
+  /* 视频预览模态框 */
+  .video-modal {
+    display: none;
+    position: fixed;
+    z-index: 10000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(10px);
+  }
+
+  .video-modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
+    width: auto;
+    height: auto;
+  }
+
+  .video-modal video {
+    width: 100%;
+    height: 100%;
+    max-width: 80vw;
+    max-height: 80vh;
+    object-fit: contain;
+  }
+
+  .video-modal-close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 10001;
+    transition: color 0.3s ease;
+  }
+
+  .video-modal-close:hover {
+    color: #ccc;
+  }
+
   /* 响应式设计 */
   @media (max-width: 1200px) {
     .exp-3-columns {
@@ -518,59 +566,98 @@
       <!-- 第六列 -->
       <div class="exp-3-column">
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/avatar-1.png" alt="Extra 1" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/video_1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/avatar-2.png" alt="Extra 2" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/video_2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
 
       <!-- 第七列 -->
       <div class="exp-3-column">
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/avatar-3.png" alt="Extra 3" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/总设计.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/avatar-4.png" alt="Extra 4" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/video_1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/avatar-5.jpg" alt="Extra 5" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/video_2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
 
       <!-- 第八列 -->
       <div class="exp-3-column">
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/image-gen-1.png" alt="Extra 6" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/video_1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/image-gen-2.jpg" alt="Extra 7" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/video_2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/image-gen-3.png" alt="Extra 8" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/总设计.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
 
       <!-- 第九列 -->
       <div class="exp-3-column">
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/image-gen-4.png" alt="Extra 9" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/video_1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/image-gen-5.png" alt="Extra 10" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/video_2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
 
       <!-- 第十列 -->
       <div class="exp-3-column">
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/video-gen-1.png" alt="Extra 11" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/总设计.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/video-gen-2.png" alt="Extra 12" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/video_1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
         <div class="exp-3-card">
-          <img src="sections/tools-showcase/images/video-gen-3.jpg" alt="Extra 13" class="exp-3-card-image" loading="lazy">
+          <video class="exp-3-card-image" muted loop playsinline>
+            <source src="videos/video_2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
     </div>
@@ -581,6 +668,17 @@
     </div>
   </div>
 </section>
+
+<!-- 视频预览模态框 -->
+<div id="exp3-video-modal" class="video-modal">
+  <span class="video-modal-close">&times;</span>
+  <div class="video-modal-content">
+    <video id="exp3-modal-video" controls autoplay>
+      <source src="" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</div>
 
 <script>
   // Exp 3 模块交互逻辑
@@ -608,6 +706,14 @@
           card.addEventListener('mouseleave', () => {
             video.pause();
           });
+
+          // 点击视频打开模态框预览
+          video.addEventListener('click', function () {
+            openVideoModal(this.querySelector('source').src);
+          });
+
+          // 添加鼠标样式提示可点击
+          video.style.cursor = 'pointer';
         }
       });
 
@@ -650,6 +756,45 @@
           }
         });
       }
+
+      // 模态框功能
+      const modal = document.getElementById('exp3-video-modal');
+      const modalVideo = document.getElementById('exp3-modal-video');
+      const closeBtn = document.querySelector('#exp3-video-modal .video-modal-close');
+
+      function openVideoModal(videoSrc) {
+        modalVideo.src = videoSrc;
+        modal.style.display = 'block';
+        document.body.style.overflow = 'hidden'; // 防止背景滚动
+      }
+
+      function closeVideoModal() {
+        modal.style.display = 'none';
+        modalVideo.pause();
+        modalVideo.src = '';
+        document.body.style.overflow = ''; // 恢复滚动
+      }
+
+      // 关闭按钮事件
+      if (closeBtn) {
+        closeBtn.addEventListener('click', closeVideoModal);
+      }
+
+      // 点击模态框背景关闭
+      if (modal) {
+        modal.addEventListener('click', function (e) {
+          if (e.target === modal) {
+            closeVideoModal();
+          }
+        });
+      }
+
+      // ESC键关闭模态框
+      document.addEventListener('keydown', function (e) {
+        if (e.key === 'Escape' && modal.style.display === 'block') {
+          closeVideoModal();
+        }
+      });
     };
 
     // DOM 加载后初始化
