--- a/sections/pic_wall/pic_wall.html
+++ b/sections/pic_wall/pic_wall.html
@@ -40,7 +40,17 @@
     transition: transform var(--transition);
   }
 
-  .pic-wall-item:hover .pic-wall-image {
+  .pic-wall-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    transition: transform var(--transition);
+    cursor: pointer;
+  }
+
+  .pic-wall-item:hover .pic-wall-image,
+  .pic-wall-item:hover .pic-wall-video {
     transform: scale(1.05);
   }
 
@@ -77,6 +87,54 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+  }
+
+  /* 视频预览模态框 */
+  .video-modal {
+    display: none;
+    position: fixed;
+    z-index: 10000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(10px);
+  }
+
+  .video-modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
+    width: auto;
+    height: auto;
+  }
+
+  .video-modal video {
+    width: 100%;
+    height: 100%;
+    max-width: 80vw;
+    max-height: 80vh;
+    object-fit: contain;
+  }
+
+  .video-modal-close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 10001;
+    transition: color 0.3s ease;
+  }
+
+  .video-modal-close:hover {
+    color: #ccc;
   }
 
   /* 响应式设计 */
@@ -126,49 +184,65 @@
   <div class="pic-wall-container">
     <div class="pic-wall-grid">
       <div class="pic-wall-item">
-        <img src="images/1.png" alt="AI Clipper" class="pic-wall-image" loading="lazy">
+        <video class="pic-wall-video" muted loop playsinline data-video-src="videos/video_1.mp4">
+          <source src="videos/video_1.mp4" type="video/mp4">
+        </video>
         <div class="pic-wall-label-overlay">
           <p class="pic-wall-label">AI Clipper</p>
         </div>
       </div>
       <div class="pic-wall-item">
-        <img src="images/2.jpg" alt="Content Generator" class="pic-wall-image" loading="lazy">
+        <video class="pic-wall-video" muted loop playsinline data-video-src="videos/video_2.mp4">
+          <source src="videos/video_2.mp4" type="video/mp4">
+        </video>
         <div class="pic-wall-label-overlay">
           <p class="pic-wall-label">Content Generator</p>
         </div>
       </div>
       <div class="pic-wall-item">
-        <img src="images/3.png" alt="AI Avatar" class="pic-wall-image" loading="lazy">
+        <video class="pic-wall-video" muted loop playsinline data-video-src="videos/总设计.mp4">
+          <source src="videos/总设计.mp4" type="video/mp4">
+        </video>
         <div class="pic-wall-label-overlay">
           <p class="pic-wall-label">AI Avatar</p>
         </div>
       </div>
       <div class="pic-wall-item">
-        <img src="images/4.png" alt="Product Shots" class="pic-wall-image" loading="lazy">
+        <video class="pic-wall-video" muted loop playsinline data-video-src="videos/video_1.mp4">
+          <source src="videos/video_1.mp4" type="video/mp4">
+        </video>
         <div class="pic-wall-label-overlay">
           <p class="pic-wall-label">Product Shots</p>
         </div>
       </div>
       <div class="pic-wall-item">
-        <img src="images/5.png" alt="Clipper" class="pic-wall-image" loading="lazy">
+        <video class="pic-wall-video" muted loop playsinline data-video-src="videos/video_2.mp4">
+          <source src="videos/video_2.mp4" type="video/mp4">
+        </video>
         <div class="pic-wall-label-overlay">
           <p class="pic-wall-label">Clipper</p>
         </div>
       </div>
       <div class="pic-wall-item">
-        <img src="images/logo.jpg" alt="Caption Generation" class="pic-wall-image" loading="lazy">
+        <video class="pic-wall-video" muted loop playsinline data-video-src="videos/总设计.mp4">
+          <source src="videos/总设计.mp4" type="video/mp4">
+        </video>
         <div class="pic-wall-label-overlay">
           <p class="pic-wall-label">Caption Generation</p>
         </div>
       </div>
       <div class="pic-wall-item">
-        <img src="images/1.png" alt="AI Voiceover" class="pic-wall-image" loading="lazy">
+        <video class="pic-wall-video" muted loop playsinline data-video-src="videos/video_1.mp4">
+          <source src="videos/video_1.mp4" type="video/mp4">
+        </video>
         <div class="pic-wall-label-overlay">
           <p class="pic-wall-label">AI Voiceover</p>
         </div>
       </div>
       <div class="pic-wall-item">
-        <img src="images/2.jpg" alt="Youtube Thumbnails" class="pic-wall-image" loading="lazy">
+        <video class="pic-wall-video" muted loop playsinline data-video-src="videos/video_2.mp4">
+          <source src="videos/video_2.mp4" type="video/mp4">
+        </video>
         <div class="pic-wall-label-overlay">
           <p class="pic-wall-label">Youtube Thumbnails</p>
         </div>
@@ -177,19 +251,92 @@
   </div>
 </section>
 
+<!-- 视频预览模态框 -->
+<div id="picwall-video-modal" class="video-modal">
+  <span class="video-modal-close">&times;</span>
+  <div class="video-modal-content">
+    <video id="picwall-modal-video" controls>
+      <source src="" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</div>
+
 <script>
   // Pic Wall 模块交互逻辑
   (function () {
     'use strict';
 
     const initPicWall = () => {
-      // 图片加载错误处理
-      const images = document.querySelectorAll('.pic-wall-image');
-      images.forEach((img) => {
-        img.addEventListener('error', function () {
-          console.warn(`Failed to load image: ${this.src}`);
+      // 视频加载错误处理
+      const videos = document.querySelectorAll('.pic-wall-video');
+      videos.forEach((video) => {
+        video.addEventListener('error', function () {
+          console.warn(`Failed to load video: ${this.querySelector('source').src}`);
           this.style.display = 'none';
         });
+
+        // 初始状态暂停视频
+        video.pause();
+
+        // 鼠标悬停时播放视频
+        const item = video.closest('.pic-wall-item');
+        if (item) {
+          item.addEventListener('mouseenter', () => {
+            video.play();
+          });
+          item.addEventListener('mouseleave', () => {
+            video.pause();
+            video.currentTime = 0; // 重置到开始位置
+          });
+
+          // 点击视频打开模态框预览
+          video.addEventListener('click', function () {
+            openVideoModal(this.querySelector('source').src);
+          });
+
+          // 添加鼠标样式提示可点击
+          video.style.cursor = 'pointer';
+        }
+      });
+
+      // 模态框功能
+      const modal = document.getElementById('picwall-video-modal');
+      const modalVideo = document.getElementById('picwall-modal-video');
+      const closeBtn = document.querySelector('#picwall-video-modal .video-modal-close');
+
+      function openVideoModal(videoSrc) {
+        modalVideo.src = videoSrc;
+        modal.style.display = 'block';
+        document.body.style.overflow = 'hidden'; // 防止背景滚动
+      }
+
+      function closeVideoModal() {
+        modal.style.display = 'none';
+        modalVideo.pause();
+        modalVideo.src = '';
+        document.body.style.overflow = ''; // 恢复滚动
+      }
+
+      // 关闭按钮事件
+      if (closeBtn) {
+        closeBtn.addEventListener('click', closeVideoModal);
+      }
+
+      // 点击模态框背景关闭
+      if (modal) {
+        modal.addEventListener('click', function (e) {
+          if (e.target === modal) {
+            closeVideoModal();
+          }
+        });
+      }
+
+      // ESC键关闭模态框
+      document.addEventListener('keydown', function (e) {
+        if (e.key === 'Escape' && modal.style.display === 'block') {
+          closeVideoModal();
+        }
       });
     };
 
