--- a/sections/style_cea/style_cea.html
+++ b/sections/style_cea/style_cea.html
@@ -77,7 +77,17 @@
     transition: transform var(--transition);
   }
 
-  .style-cea-card:hover .style-cea-card-image {
+  .style-cea-card-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    transition: transform var(--transition);
+    cursor: pointer;
+  }
+
+  .style-cea-card:hover .style-cea-card-image,
+  .style-cea-card:hover .style-cea-card-video {
     transform: scale(1.05);
   }
 
@@ -121,6 +131,54 @@
     line-height: 1.5;
     margin: 0;
     text-align: left;
+  }
+
+  /* 视频预览模态框 */
+  .video-modal {
+    display: none;
+    position: fixed;
+    z-index: 10000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(10px);
+  }
+
+  .video-modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
+    width: auto;
+    height: auto;
+  }
+
+  .video-modal video {
+    width: 100%;
+    height: 100%;
+    max-width: 80vw;
+    max-height: 80vh;
+    object-fit: contain;
+  }
+
+  .video-modal-close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 10001;
+    transition: color 0.3s ease;
+  }
+
+  .video-modal-close:hover {
+    color: #ccc;
   }
 
   /* 响应式设计 */
@@ -177,7 +235,9 @@
     <div class="style-cea-grid">
       <!-- Card 1 -->
       <div class="style-cea-card">
-        <img src="images/1.png" alt="Ingest your kit" class="style-cea-card-image" loading="lazy">
+        <video class="style-cea-card-video" muted loop playsinline data-video-src="videos/video_1.mp4">
+          <source src="videos/video_1.mp4" type="video/mp4">
+        </video>
         <div class="style-cea-card-overlay">
           <h4 class="style-cea-card-title">Ingest your kit</h4>
           <p class="style-cea-card-description">Colors, fonts, lower thirds, logo safe zones, intro/outro.</p>
@@ -186,7 +246,9 @@
 
       <!-- Card 2 -->
       <div class="style-cea-card">
-        <img src="images/2.jpg" alt="Style DNA" class="style-cea-card-image" loading="lazy">
+        <video class="style-cea-card-video" muted loop playsinline data-video-src="videos/video_2.mp4">
+          <source src="videos/video_2.mp4" type="video/mp4">
+        </video>
         <div class="style-cea-card-overlay">
           <h4 class="style-cea-card-title">Style DNA</h4>
           <p class="style-cea-card-description">Captures tone, pacing, motion and composition preferences.</p>
@@ -195,7 +257,9 @@
 
       <!-- Card 3 -->
       <div class="style-cea-card">
-        <img src="images/3.png" alt="Protected outputs" class="style-cea-card-image" loading="lazy">
+        <video class="style-cea-card-video" muted loop playsinline data-video-src="videos/总设计.mp4">
+          <source src="videos/总设计.mp4" type="video/mp4">
+        </video>
         <div class="style-cea-card-overlay">
           <h4 class="style-cea-card-title">Protected outputs</h4>
           <p class="style-cea-card-description">Brand recipes prevent drift and keep every render consistent.</p>
@@ -204,7 +268,9 @@
 
       <!-- Card 4 -->
       <div class="style-cea-card">
-        <img src="images/4.png" alt="Ingest your kit" class="style-cea-card-image" loading="lazy">
+        <video class="style-cea-card-video" muted loop playsinline data-video-src="videos/video_1.mp4">
+          <source src="videos/video_1.mp4" type="video/mp4">
+        </video>
         <div class="style-cea-card-overlay">
           <h4 class="style-cea-card-title">Ingest your kit</h4>
           <p class="style-cea-card-description">Colors, fonts, lower thirds, logo safe zones, intro/outro.</p>
@@ -213,7 +279,9 @@
 
       <!-- Card 5 -->
       <div class="style-cea-card">
-        <img src="images/5.png" alt="Style DNA" class="style-cea-card-image" loading="lazy">
+        <video class="style-cea-card-video" muted loop playsinline data-video-src="videos/video_2.mp4">
+          <source src="videos/video_2.mp4" type="video/mp4">
+        </video>
         <div class="style-cea-card-overlay">
           <h4 class="style-cea-card-title">Style DNA</h4>
           <p class="style-cea-card-description">Captures tone, pacing, motion and composition preferences.</p>
@@ -222,7 +290,9 @@
 
       <!-- Card 6 -->
       <div class="style-cea-card">
-        <img src="images/logo.jpg" alt="Protected outputs" class="style-cea-card-image" loading="lazy">
+        <video class="style-cea-card-video" muted loop playsinline data-video-src="videos/总设计.mp4">
+          <source src="videos/总设计.mp4" type="video/mp4">
+        </video>
         <div class="style-cea-card-overlay">
           <h4 class="style-cea-card-title">Protected outputs</h4>
           <p class="style-cea-card-description">Brand recipes prevent drift and keep every render consistent.</p>
@@ -232,19 +302,92 @@
   </div>
 </section>
 
+<!-- 视频预览模态框 -->
+<div id="stylecea-video-modal" class="video-modal">
+  <span class="video-modal-close">&times;</span>
+  <div class="video-modal-content">
+    <video id="stylecea-modal-video" controls>
+      <source src="" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</div>
+
 <script>
   // Style CEA 模块交互逻辑
   (function () {
     'use strict';
 
     const initStyleCea = () => {
-      // 图片加载错误处理
-      const images = document.querySelectorAll('.style-cea-card-image');
-      images.forEach((img) => {
-        img.addEventListener('error', function () {
-          console.warn(`Failed to load image: ${this.src}`);
+      // 视频加载错误处理
+      const videos = document.querySelectorAll('.style-cea-card-video');
+      videos.forEach((video) => {
+        video.addEventListener('error', function () {
+          console.warn(`Failed to load video: ${this.querySelector('source').src}`);
           this.style.display = 'none';
         });
+
+        // 初始状态暂停视频
+        video.pause();
+
+        // 鼠标悬停时播放视频
+        const card = video.closest('.style-cea-card');
+        if (card) {
+          card.addEventListener('mouseenter', () => {
+            video.play();
+          });
+          card.addEventListener('mouseleave', () => {
+            video.pause();
+            video.currentTime = 0; // 重置到开始位置
+          });
+
+          // 点击视频打开模态框预览
+          video.addEventListener('click', function () {
+            openVideoModal(this.querySelector('source').src);
+          });
+
+          // 添加鼠标样式提示可点击
+          video.style.cursor = 'pointer';
+        }
+      });
+
+      // 模态框功能
+      const modal = document.getElementById('stylecea-video-modal');
+      const modalVideo = document.getElementById('stylecea-modal-video');
+      const closeBtn = document.querySelector('#stylecea-video-modal .video-modal-close');
+
+      function openVideoModal(videoSrc) {
+        modalVideo.src = videoSrc;
+        modal.style.display = 'block';
+        document.body.style.overflow = 'hidden'; // 防止背景滚动
+      }
+
+      function closeVideoModal() {
+        modal.style.display = 'none';
+        modalVideo.pause();
+        modalVideo.src = '';
+        document.body.style.overflow = ''; // 恢复滚动
+      }
+
+      // 关闭按钮事件
+      if (closeBtn) {
+        closeBtn.addEventListener('click', closeVideoModal);
+      }
+
+      // 点击模态框背景关闭
+      if (modal) {
+        modal.addEventListener('click', function (e) {
+          if (e.target === modal) {
+            closeVideoModal();
+          }
+        });
+      }
+
+      // ESC键关闭模态框
+      document.addEventListener('keydown', function (e) {
+        if (e.key === 'Escape' && modal.style.display === 'block') {
+          closeVideoModal();
+        }
       });
     };
 
