--- a/sections/brand-control_cmps/brand-control_cmps.html
+++ b/sections/brand-control_cmps/brand-control_cmps.html
@@ -86,6 +86,14 @@
     display: block;
   }
 
+  .brand-control-cmps-card-video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    cursor: pointer;
+  }
+
   /* 卡片内容区域 - 在图片外部下方 */
   .brand-control-cmps-card-content {
     display: flex;
@@ -110,6 +118,54 @@
     line-height: 1.5;
     color: var(--color-text-secondary);
     margin: 0;
+  }
+
+  /* 视频预览模态框 */
+  .video-modal {
+    display: none;
+    position: fixed;
+    z-index: 10000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.9);
+    backdrop-filter: blur(10px);
+  }
+
+  .video-modal-content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    max-width: 90%;
+    max-height: 90%;
+    width: auto;
+    height: auto;
+  }
+
+  .video-modal video {
+    width: 100%;
+    height: 100%;
+    max-width: 80vw;
+    max-height: 80vh;
+    object-fit: contain;
+  }
+
+  .video-modal-close {
+    position: absolute;
+    top: 20px;
+    right: 40px;
+    color: white;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+    z-index: 10001;
+    transition: color 0.3s ease;
+  }
+
+  .video-modal-close:hover {
+    color: #ccc;
   }
 
   /* 响应式设计 */
@@ -186,14 +242,17 @@
     <!-- 卡片网格 -->
     <div class="brand-control-cmps-cards">
       <!-- 卡片 1: Ingest your kit -->
-      <div class="brand-control-cmps-card">
+      <div class="brand-control-cmps-card" data-video-card>
         <div class="brand-control-cmps-card-image-wrapper">
-          <img
-            src="images/1.png"
-            alt="Ingest your kit"
-            class="brand-control-cmps-card-image"
-            loading="lazy"
+          <video
+            class="brand-control-cmps-card-video"
+            muted
+            loop
+            playsinline
+            data-video-src="videos/video_1.mp4"
           >
+            <source src="videos/video_1.mp4" type="video/mp4">
+          </video>
         </div>
         <div class="brand-control-cmps-card-content">
           <h3 class="brand-control-cmps-card-title">Ingest your kit</h3>
@@ -204,14 +263,17 @@
       </div>
 
       <!-- 卡片 2: Style DNA -->
-      <div class="brand-control-cmps-card">
+      <div class="brand-control-cmps-card" data-video-card>
         <div class="brand-control-cmps-card-image-wrapper">
-          <img
-            src="images/2.jpg"
-            alt="Style DNA"
-            class="brand-control-cmps-card-image"
-            loading="lazy"
+          <video
+            class="brand-control-cmps-card-video"
+            muted
+            loop
+            playsinline
+            data-video-src="videos/video_2.mp4"
           >
+            <source src="videos/video_2.mp4" type="video/mp4">
+          </video>
         </div>
         <div class="brand-control-cmps-card-content">
           <h3 class="brand-control-cmps-card-title">Style DNA</h3>
@@ -222,14 +284,17 @@
       </div>
 
       <!-- 卡片 3: Protected outputs -->
-      <div class="brand-control-cmps-card">
+      <div class="brand-control-cmps-card" data-video-card>
         <div class="brand-control-cmps-card-image-wrapper">
-          <img
-            src="images/3.png"
-            alt="Protected outputs"
-            class="brand-control-cmps-card-image"
-            loading="lazy"
+          <video
+            class="brand-control-cmps-card-video"
+            muted
+            loop
+            playsinline
+            data-video-src="videos/视频_2.mp4"
           >
+            <source src="videos/总设计.mp4" type="video/mp4">
+          </video>
         </div>
         <div class="brand-control-cmps-card-content">
           <h3 class="brand-control-cmps-card-title">Protected outputs</h3>
@@ -242,18 +307,99 @@
   </div>
 </section>
 
+<!-- 视频预览模态框 -->
+<div id="brandcontrolcmps-video-modal" class="video-modal">
+  <span class="video-modal-close">&times;</span>
+  <div class="video-modal-content">
+    <video id="brandcontrolcmps-modal-video" controls>
+      <source src="" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+  </div>
+</div>
+
 <script>
   // Brand Control CMPS 模块交互逻辑
   (function () {
     'use strict';
 
     const initBrandControlCmps = () => {
-      // 图片加载错误处理
-      const images = document.querySelectorAll('.brand-control-cmps-card-image');
-      images.forEach(img => {
-        img.addEventListener('error', function() {
-          console.warn(`Failed to load image: ${this.src}`);
+      // 视频加载错误处理
+      const videos = document.querySelectorAll('.brand-control-cmps-card-video');
+      videos.forEach(video => {
+        video.addEventListener('error', function() {
+          console.warn(`Failed to load video: ${this.querySelector('source').src}`);
+          this.style.display = 'none';
         });
+
+        // 初始状态暂停视频
+        video.pause();
+      });
+
+      // 为每个卡片添加交互功能
+      const cards = document.querySelectorAll('.brand-control-cmps-card[data-video-card]');
+      cards.forEach(card => {
+        const video = card.querySelector('.brand-control-cmps-card-video');
+        if (!video) return;
+
+        // 鼠标悬停时播放视频
+        card.addEventListener('mouseenter', () => {
+          video.play().catch(err => {
+            console.log('Brand Control CMPS video play failed:', err);
+          });
+        });
+
+        card.addEventListener('mouseleave', () => {
+          video.pause();
+          video.currentTime = 0;
+        });
+
+        // 点击打开模态框预览
+        card.addEventListener('click', function () {
+          openVideoModal(video.querySelector('source').src);
+        });
+
+        // 添加鼠标样式提示可点击
+        card.style.cursor = 'pointer';
+      });
+
+      // 模态框功能
+      const modal = document.getElementById('brandcontrolcmps-video-modal');
+      const modalVideo = document.getElementById('brandcontrolcmps-modal-video');
+      const closeBtn = document.querySelector('#brandcontrolcmps-video-modal .video-modal-close');
+
+      function openVideoModal(videoSrc) {
+        modalVideo.src = videoSrc;
+        modal.style.display = 'block';
+        document.body.style.overflow = 'hidden'; // 防止背景滚动
+      }
+
+      function closeVideoModal() {
+        modal.style.display = 'none';
+        modalVideo.pause();
+        modalVideo.src = '';
+        document.body.style.overflow = ''; // 恢复滚动
+      }
+
+      // 关闭按钮事件
+      if (closeBtn) {
+        closeBtn.addEventListener('click', closeVideoModal);
+      }
+
+      // 点击模态框背景关闭
+      if (modal) {
+        modal.addEventListener('click', function (e) {
+          if (e.target === modal) {
+            closeVideoModal();
+          }
+        });
+      }
+
+      // ESC键关闭模态框
+      document.addEventListener('keydown', function (e) {
+        if (e.key === 'Escape' && modal.style.display === 'block') {
+          closeVideoModal();
+        }
       });
     };
 
