--- a/sections/compose/compose.html
+++ b/sections/compose/compose.html
@@ -23,7 +23,7 @@
     justify-content: center;
   }
 
-  /* 背景图片容器 - 近乎全屏的圆角图片 */
+  /* 背景图片容器 - 改为视频背景 */
   .compose-background {
     position: relative;
     width: 100%;
@@ -34,6 +34,18 @@
     overflow: hidden;
     z-index: 0;
     box-sizing: border-box;
+  }
+
+  /* 背景视频样式 */
+  .compose-background-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+    z-index: 1;
   }
 
   .compose-background-image {
@@ -58,7 +70,7 @@
     width: 146%;
   }
 
-  /* 像素风格标题 - 放大字体，不换行，舒展 */
+  /* 像素风格标题 - 响应式换行支持 */
   .compose-title {
     font-family: 'Press Start 2P', cursive;
     font-size: clamp(1.2rem, 4vw, 2.5rem);
@@ -72,9 +84,22 @@
     image-rendering: pixelated;
     image-rendering: -moz-crisp-edges;
     image-rendering: crisp-edges;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+  }
+
+  /* 桌面端保持不换行 */
+  @media (min-width: 768px) {
+    .compose-title {
+      white-space: nowrap;
+    }
+  }
+
+  /* 手机端允许换行 */
+  @media (max-width: 767px) {
+    .compose-title {
+      white-space: normal;
+    }
   }
 
   /* 描述文字 - Sora 细体，减小字号 */
@@ -135,7 +160,8 @@
       font-size: clamp(0.9rem, 5vw, 1.8rem);
       letter-spacing: 0.12em;
       margin-bottom: var(--spacing-sm);
-      white-space: nowrap;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
     }
 
     .compose-description {
@@ -167,7 +193,8 @@
       letter-spacing: 0.1em;
       line-height: 1.4;
       margin-bottom: var(--spacing-xs);
-      white-space: nowrap;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
     }
 
     .compose-description {
@@ -188,7 +215,10 @@
   <div class="compose-container">
     <!-- 背景图片容器 -->
     <div class="compose-background">
-      <img src="sections/compose/bg.jpg" alt="Compose Background" class="compose-background-image" loading="eager">
+      <video class="compose-background-video" autoplay muted loop playsinline>
+        <source src="videos/video_1.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
 
       <!-- 内容覆盖层 - 定位在左下角 -->
       <div class="compose-content">
@@ -218,13 +248,18 @@
     'use strict';
 
     const initCompose = () => {
-      // 图片加载错误处理
-      const bgImage = document.querySelector('.compose-background-image');
-      if (bgImage) {
-        bgImage.addEventListener('error', function () {
-          console.warn(`Failed to load background image: ${this.src}`);
+      // 视频加载错误处理
+      const bgVideo = document.querySelector('.compose-background-video');
+      if (bgVideo) {
+        bgVideo.addEventListener('error', function () {
+          console.warn(`Failed to load background video: ${this.querySelector('source').src}`);
           // 可以设置默认背景色
           this.style.display = 'none';
+        });
+
+        // 确保视频能够自动播放（compose模块不需要点击放大功能）
+        bgVideo.play().catch(function(error) {
+          console.warn('视频自动播放被阻止:', error);
         });
       }
     };
